<resources>
    <string name="IBGAskQuestionHint">Ask us anything.</string>
    <string name="IBGPromptOptionsReportBug">Report a bug</string>
    <string name="IBGReportBugHint">Please be as detailed as possible. What did you expect and what happened instead?</string>
    <string name="IBGReproStepsDisclaimerBody">To help us fix the problem, your report will include a list of steps to reproduce the issue.</string>
    <string name="IBGReproStepsDisclaimerLink">Edit list</string>
    <string name="IBGReproStepsListEmptyStateLabel">All app screens have been deleted.</string>
    <string name="IBGReproStepsListHeader">The list of app screens you visited will only be used to help us reproduce the problem you’re reporting.</string>
    <string name="IBGReproStepsListItemName">Screen #</string>
    <string name="IBGReproStepsListTitle">Visited Screens</string>
    <string name="IBGSuggestImprovementHint">How can we improve your experience using this app?</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accept">Accept</string>
    <string name="accept_speaker_invite">Accept speaking invitation</string>
    <string name="account">Account</string>
    <string name="activity">Activity</string>
    <string name="add">Add</string>
    <string name="add_a_bio">Add a bio</string>
    <string name="add_a_co_host_or_guest">Add a Co-host or Guest</string>
    <string name="add_a_topic">Add a topic</string>
    <string name="add_a_topic_button_label">+ Add a topic</string>
    <string name="add_club_rules">Add Club Rules</string>
    <string name="add_feature">Add your thoughts</string>
    <string name="add_member">Add member</string>
    <string name="add_members">Add Members</string>
    <string name="add_photo">Add a photo</string>
    <string name="add_to_cal">Add to Cal</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="add_your_interests">"Add your interests so we can begin
to personalize Clubhouse for you.
Interests are private to you."</string>
    <string name="allow_followers">Allow Followers</string>
    <string name="already_invited">Already Invited</string>
    <string name="already_on_clubhouse">Already on Clubhouse</string>
    <string name="amp_label_copied">Copied To Clipboard</string>
    <string name="amp_label_copy">Copy</string>
    <string name="amp_label_device_id">DEVICE ID</string>
    <string name="amp_label_not_avail">N/A</string>
    <string name="amp_label_user_id">USER ID</string>
    <string name="amp_label_user_info">User Information</string>
    <string name="and_one_other">and &lt;b>%d other&lt;/b></string>
    <string name="and_others">and &lt;b>%d others&lt;/b></string>
    <string name="api_override">Debug: API Override</string>
    <string name="api_override_message">"Restart app to apply 
Hi Jane"</string>
    <string name="app_name">Clubhouse</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="askAQuestionHeader">Ask a question</string>
    <string name="at">at</string>
    <string name="attach_an_image">Attach an image</string>
    <string name="block">Block</string>
    <string name="block_confirmation_body">"This will prevent them from entering rooms where you are a speaker, and we'll warn you about room where they are speaking."</string>
    <string name="block_confirmation_title">Block %s</string>
    <string name="block_from_channel_success">%s has been removed from the room. It may take a couple of seconds for the change to take effect.</string>
    <string name="block_success">%s has been added to your block list.</string>
    <string name="block_this_user">Block this user</string>
    <string name="blocked">Blocked</string>
    <string name="blocked_number_error">We are unable to sign you in. Please try again later.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bring_co_workers">Bring co-workers into the conversation</string>
    <string name="bring_to_club" formatted="false">Bring %d people to %s</string>
    <string name="bring_your_tweeps">Bring your Tweeps to your next event</string>
    <string name="build_string" formatted="false">Version %s (%d)</string>
    <string name="cancel">Cancel</string>
    <string name="cd_attached_image">Your attached image</string>
    <string name="cd_back">Back</string>
    <string name="cd_bell">Get notified when the conversation begins</string>
    <string name="cd_blocked_by_network">Blocked by your network</string>
    <string name="cd_calendar">Upcoming events</string>
    <string name="cd_close">Close</string>
    <string name="cd_club_name">Club: %s</string>
    <string name="cd_expand_current_room">Expand current room</string>
    <string name="cd_explore_pill">Explore to see more rooms</string>
    <string name="cd_follow_suggestion_selected">Suggested person to follow: %s, currently selected</string>
    <string name="cd_follow_suggestion_unselected">Suggested person to follow: %s, currently unselected</string>
    <string name="cd_follow_suggestions">See suggestions for users to follow</string>
    <string name="cd_hosted_by_club">Hosted by %s</string>
    <string name="cd_inviter_image">You were invited by</string>
    <string name="cd_invites">Invites</string>
    <string name="cd_listening">Listening:</string>
    <string name="cd_menu">Options</string>
    <string name="cd_mute">Mute</string>
    <string name="cd_my_profile">My profile</string>
    <string name="cd_next">Next</string>
    <string name="cd_notifications">Notifications</string>
    <string name="cd_notify_options">Change notification options</string>
    <string name="cd_num_listening">%d Listening</string>
    <string name="cd_num_speakers">%d Speakers</string>
    <string name="cd_ping_button">Ping someone into the room</string>
    <string name="cd_private_room">Private room</string>
    <string name="cd_profile_photo">Profile Photo</string>
    <string name="cd_raise_hand_button">Raise hand</string>
    <string name="cd_raised_hands_count">Raised hands list, %d hands are raised</string>
    <string name="cd_room_mode">Room mode</string>
    <string name="cd_search">Search</string>
    <string name="cd_settings">Settings</string>
    <string name="cd_share">Share</string>
    <string name="cd_social_room">Social mode room</string>
    <string name="cd_speaking">Speaking:</string>
    <string name="cd_unmute">Unmute</string>
    <string name="cd_verify_email">Verify your email</string>
    <string name="cd_welcome_room">Tap to join</string>
    <string name="change_photo">Change Photo</string>
    <string name="change_your_photo">Change your photo</string>
    <string name="channel_explanation_closed">Start a room for &lt;b>people I choose&lt;/b></string>
    <string name="channel_explanation_closed_with_topic">Start a room for &lt;b>people I choose&lt;/b> with the topic \"%s\"</string>
    <string name="channel_explanation_club">Start a room for &lt;b>%s&lt;/b> members</string>
    <string name="channel_explanation_club_with_topic">Start a room for &lt;b>%1$s&lt;/b> members with the topic \"%2$s\"</string>
    <string name="channel_explanation_open">Start a room &lt;b>open to everyone&lt;/b></string>
    <string name="channel_explanation_open_with_topic">Start a room &lt;b>open to everyone&lt;/b> with the topic \"%s\"</string>
    <string name="channel_explanation_social">Start a room with &lt;b>people I follow&lt;/b></string>
    <string name="channel_explanation_social_with_topic">Start a room with &lt;b>people I follow&lt;/b> > with the topic \"%s\"</string>
    <string name="club_invite_message">"&lt;b>Who else would be great for this club?&lt;/b> Invite as many people who follow you on Clubhouse as you'd like!"</string>
    <string name="connect_instagram">Connect Instagram</string>
    <string name="connect_twitter">Connect Twitter</string>
    <string name="deactivate">Deactivate</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="deactivate_details">Your profile will no longer be shown anywhere within Clubhouse.</string>
    <string name="deactivate_title">This will deactivate your account</string>
    <string name="deactivation_permanent_details">If your account stays deactivated for 30 days, we will permanently disable your account. After that you will not be able to recover your followers or club founder status.</string>
    <string name="deactivation_permanent_title">After that, deactivation is permanent</string>
    <string name="done">Done</string>
    <string name="faq">FAQ / Contact Us</string>
    <string name="frequency">Frequency</string>
    <string name="guidelines">Community Guidelines</string>
    <string name="hi_there" />
    <string name="interests">Interests</string>
    <string name="launch_onboarding">Debug: Launch Onboarding</string>
    <string name="log_out">Log out</string>
    <string name="notifications">Notifications</string>
    <string name="pause_notifications">Pause Notifications</string>
    <string name="people_search_empty">No users found</string>
    <string name="people_search_hint">Find People</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="reactivate_details">Log back in to your account at any time in the next 30 days and your account will return back to normal. You can only deactivate once per week.</string>
    <string name="reactivate_title">You have 30 days to reactivate it</string>
    <string name="settings">Settings</string>
    <string name="start_a_room">Start a room</string>
    <string name="tos">Terms of Service</string>
    <string name="trending_rooms">Include Trending Rooms</string>
    <string name="understand_deactivate_account">I understand. Deactivate Account</string>
    <string name="whats_new">"What's New"</string>
</resources>