<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="?android:windowBackground" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" style="@style/ClubhouseNavToolbar">
        <ImageView android:id="@id/back" style="@style/ClubhouseNavBackIcon" />
        <TextView android:id="@id/toolbar_title" android:text="@string/settings" style="@style/ClubhouseNavTitle" />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/common_bottom_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textColor="@color/clubhouse_dark_gray" android:id="@id/notifications_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_touchable_padding" android:text="@string/notifications" android:layout_marginStart="20.0dip" style="@style/TextStyle.Light" />
            <androidx.cardview.widget.CardView android:id="@id/notifications_section" style="@style/Clubhouse.CardView">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <FrameLayout android:id="@id/notification_frequency_row" android:background="?selectableItemBackground" android:focusable="true" android:clickable="true" style="@style/Clubhouse.Settings.Row">
                        <TextView android:background="@null" android:clickable="false" android:layout_width="wrap_content" android:foreground="@null" android:text="@string/frequency" android:paddingStart="0.0dip" android:paddingEnd="0.0dip" style="@style/Clubhouse.Settings.Item" />
                        <TextView android:layout_gravity="end|center" android:id="@id/notification_frequency_label" style="@style/Clubhouse.Settings.Item.Select" />
                    </FrameLayout>
                    <View style="@style/Divider" />
                    <com.google.android.material.switchmaterial.SwitchMaterial android:id="@id/trending_rooms_switch" android:text="@string/trending_rooms" style="@style/Clubhouse.Settings.Item" />
                    <View style="@style/Divider" />
                    <com.google.android.material.switchmaterial.SwitchMaterial android:id="@id/pause_notifications_switch" android:text="@string/pause_notifications" style="@style/Clubhouse.Settings.Item" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:background="?selectableItemBackground" android:layout_marginTop="@dimen/common_bottom_margin" style="@style/Clubhouse.CardView">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:gravity="center_vertical" android:id="@id/account" android:layout_height="44.0dip" android:text="@string/account" android:paddingEnd="18.0dip" app:drawableEndCompat="@drawable/ic_right_arrow" style="@style/Clubhouse.Settings.Item" />
                    <View style="@style/Divider" />
                    <TextView android:gravity="center_vertical" android:id="@id/interests" android:layout_height="44.0dip" android:text="@string/interests" android:paddingEnd="18.0dip" app:drawableEndCompat="@drawable/ic_right_arrow" style="@style/Clubhouse.Settings.Item" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:id="@id/links" android:background="?selectableItemBackground" android:layout_marginTop="@dimen/common_bottom_margin" style="@style/Clubhouse.CardView">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:gravity="center_vertical" android:id="@id/whats_new" android:layout_height="44.0dip" android:text="@string/whats_new" app:drawableEndCompat="@drawable/ic_arrow_up_right" style="@style/Clubhouse.Settings.Item" />
                    <View style="@style/Divider" />
                    <TextView android:gravity="center_vertical" android:id="@id/faq" android:layout_height="44.0dip" android:text="@string/faq" app:drawableEndCompat="@drawable/ic_arrow_up_right" style="@style/Clubhouse.Settings.Item" />
                    <View style="@style/Divider" />
                    <TextView android:gravity="center_vertical" android:id="@id/guidelines" android:layout_height="44.0dip" android:text="@string/guidelines" app:drawableEndCompat="@drawable/ic_arrow_up_right" style="@style/Clubhouse.Settings.Item" />
                    <View style="@style/Divider" />
                    <TextView android:gravity="center_vertical" android:id="@id/terms" android:layout_height="44.0dip" android:text="@string/tos" app:drawableEndCompat="@drawable/ic_arrow_up_right" style="@style/Clubhouse.Settings.Item" />
                    <View style="@style/Divider" />
                    <TextView android:gravity="center_vertical" android:id="@id/privacy" android:text="@string/privacy_policy" app:drawableEndCompat="@drawable/ic_arrow_up_right" style="@style/Clubhouse.Settings.Item" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:id="@id/debug_settings" android:visibility="gone" android:layout_marginTop="@dimen/common_bottom_margin" style="@style/Clubhouse.CardView">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textColor="@color/clubhouse_green" android:id="@id/onboarding" android:text="@string/launch_onboarding" android:textAlignment="center" style="@style/Clubhouse.Settings.Item" />
                    <View style="@style/Divider" />
                    <TextView android:textColor="@color/clubhouse_green" android:id="@id/api_override" android:visibility="gone" android:text="@string/api_override" android:textAlignment="center" style="@style/Clubhouse.Settings.Item" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:layout_marginTop="@dimen/common_bottom_margin" android:layout_marginBottom="@dimen/common_bottom_margin" android:layout_marginVertical="@dimen/common_bottom_margin" style="@style/Clubhouse.CardView">
                <TextView android:textColor="@color/clubhouse_red" android:id="@id/log_out" android:text="@string/log_out" android:textAlignment="center" style="@style/Clubhouse.Settings.Item" />
            </androidx.cardview.widget.CardView>
            <TextView android:textSize="12.0sp" android:layout_gravity="center" android:id="@id/build_number" android:padding="@dimen/common_touchable_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>