<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:background="?android:windowBackground" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/ClubhouseNavToolbar">
        <ImageView android:id="@id/back" style="@style/ClubhouseNavBackIcon" />
        <TextView android:id="@id/toolbar_title" android:text="@string/deactivate" style="@style/ClubhouseNavTitle" />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView android:id="@id/scroll" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_constrainedHeight="true" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:id="@id/deactivate_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_row_horizontal_padding" android:text="@string/deactivate_title" android:layout_marginStart="@dimen/common_horizontal_margin" android:layout_marginEnd="@dimen/common_horizontal_half_margin" style="@style/TextStyle.Bold" />
            <TextView android:textSize="16.0sp" android:id="@id/deactivate_details" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/deactivate_details" android:layout_marginStart="@dimen/common_horizontal_margin" android:layout_marginEnd="@dimen/common_horizontal_half_margin" style="@style/TextStyle.Regular" />
            <TextView android:textSize="16.0sp" android:id="@id/reactivate_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_row_horizontal_padding" android:text="@string/reactivate_title" android:layout_marginStart="@dimen/common_horizontal_margin" android:layout_marginEnd="@dimen/common_horizontal_half_margin" style="@style/TextStyle.Bold" />
            <TextView android:textSize="16.0sp" android:id="@id/reactivate_details" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reactivate_details" android:layout_marginStart="@dimen/common_horizontal_margin" android:layout_marginEnd="@dimen/common_horizontal_half_margin" style="@style/TextStyle.Regular" />
            <TextView android:textSize="16.0sp" android:id="@id/deactivation_permanent_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_row_horizontal_padding" android:text="@string/deactivation_permanent_title" android:layout_marginStart="@dimen/common_horizontal_margin" android:layout_marginEnd="@dimen/common_horizontal_half_margin" style="@style/TextStyle.Bold" />
            <TextView android:textSize="16.0sp" android:id="@id/deactivation_permanent_details" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/deactivation_permanent_details" android:layout_marginStart="@dimen/common_horizontal_margin" android:layout_marginEnd="@dimen/common_horizontal_half_margin" style="@style/TextStyle.Regular" />
        </LinearLayout>
    </ScrollView>
    <androidx.cardview.widget.CardView android:layout_marginBottom="@dimen/common_bottom_margin" app:cardBackgroundColor="@color/clubhouse_red" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/Clubhouse.CardView">
        <TextView android:textColor="@color/white" android:id="@id/deactivate" android:text="@string/understand_deactivate_account" android:textAlignment="center" style="@style/Clubhouse.Settings.Item" />
    </androidx.cardview.widget.CardView>
    <ProgressBar android:id="@id/loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>