<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="?android:windowBackground" android:focusable="true" android:focusableInTouchMode="true" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/ClubhouseNavToolbar">
        <ImageView android:id="@id/back" android:contentDescription="@string/cd_back" style="@style/ClubhouseNavBackIcon" />
        <TextView android:text="@string/add_members" style="@style/ClubhouseNavTitle" />
        <TextView android:textColor="@color/clubhouse_green_color" android:id="@id/done" android:visibility="gone" android:text="@string/done" style="@style/ClubhouseNavRightTextStyle" />
    </androidx.appcompat.widget.Toolbar>
    <TextView android:gravity="center" android:id="@id/invite_message" android:paddingBottom="@dimen/common_touchable_padding" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/common_horizontal_margin" android:layout_marginRight="@dimen/common_horizontal_margin" android:text="@string/club_invite_message" android:layout_marginHorizontal="@dimen/common_horizontal_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar" style="@style/TextStyle.Medium.Banner" />
    <EditText android:id="@id/search" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/explore_horizontal_margin" android:layout_marginRight="@dimen/explore_horizontal_margin" android:hint="@string/people_search_hint" android:layout_marginHorizontal="@dimen/explore_horizontal_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/invite_message" style="@style/Clubhouse.SearchField.Dark" />
    <com.airbnb.epoxy.EpoxyRecyclerView android:id="@id/results_list" android:paddingTop="@dimen/list_item_spacing" android:paddingBottom="@dimen/list_item_spacing" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="@dimen/common_touchable_padding" android:paddingVertical="@dimen/list_item_spacing" app:itemSpacing="@dimen/list_item_spacing" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/search" />
    <ProgressBar android:id="@id/loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/search" />
    <TextView android:id="@id/empty" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/people_search_empty" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/search" style="@style/TextStyle.Medium.EmptyState.Explore" />
</androidx.constraintlayout.widget.ConstraintLayout>