<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:clipChildren="false" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/ClubhouseNavToolbar">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:id="@id/search_icon" android:src="@drawable/ic_search" android:contentDescription="@string/cd_search" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/ClubhouseNavIcon" />
            <com.clubhouse.android.shared.ui.AvatarView android:id="@id/me" android:contentDescription="@string/cd_my_profile" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/ClubhouseNavIcon" />
            <ImageView android:id="@id/notification_icon" android:src="@drawable/ic_notification_off" android:contentDescription="@string/cd_notifications" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/me" app:layout_constraintTop_toTopOf="parent" style="@style/ClubhouseNavIcon" />
            <ImageView android:id="@id/events_icon" android:src="@drawable/ic_calendar" android:contentDescription="@string/cd_calendar" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/notification_icon" app:layout_constraintTop_toTopOf="parent" style="@style/ClubhouseNavIcon" />
            <ImageView android:id="@id/invites_icon" android:layout_width="36.0dip" android:layout_height="32.0dip" android:src="@drawable/ic_invites_none_remaining" android:contentDescription="@string/cd_invites" android:layout_marginStart="18.0dip" android:layout_marginEnd="18.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/events_icon" app:layout_constraintTop_toTopOf="parent" style="@style/ClubhouseNavIcon" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
    <TextView android:gravity="center" android:id="@id/empty_view" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/common_large_margin" android:layout_marginRight="@dimen/common_large_margin" android:text="@string/hi_there" android:layout_marginHorizontal="@dimen/common_large_margin" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextStyle.Hallway.EmptyState" />
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@id/refresh" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar">
        <com.airbnb.epoxy.EpoxyRecyclerView android:id="@id/channel_list" android:paddingBottom="@dimen/hallway_bottom_explore_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <View android:id="@id/bottom_shadow" android:background="@drawable/list_bottom_shadow" android:layout_width="fill_parent" android:layout_height="@dimen/common_list_bottom_shadow_height" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <Button android:id="@id/start_room" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/common_action_button_bottom_margin" android:text="@string/start_a_room" android:paddingStart="@dimen/hallway_start_button_start_padding" android:paddingEnd="@dimen/hallway_start_button_end_padding" app:icon="@drawable/ic_add" app:iconTint="@color/white" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/Clubhouse.Button.Rounded.PrimaryAction" />
</androidx.constraintlayout.widget.ConstraintLayout>